@@ -6,21 +6,20 @@ import eu.pb4.mapcanvas.api.core.PlayerCanvas;
 import eu.pb4.mapcanvas.api.font.DefaultFonts;
 import eu.pb4.mapcanvas.api.utils.CanvasUtils;
 import eu.pb4.mapcanvas.api.utils.VirtualDisplay;
-import net.minecraft.block.BlockState;
-import net.minecraft.block.MapColor;
-import net.minecraft.block.PillarBlock;
-import net.minecraft.entity.Entity;
-import net.minecraft.fluid.FluidState;
+import net.minecraft.core.Direction;
 import net.minecraft.server.MinecraftServer;
-import net.minecraft.server.network.ServerPlayerEntity;
-import net.minecraft.util.ClickType;
-import net.minecraft.util.hit.BlockHitResult;
-import net.minecraft.util.math.Direction;
-import net.minecraft.util.math.MathHelper;
-import net.minecraft.util.math.Vec3d;
-import net.minecraft.util.shape.VoxelShape;
-import net.minecraft.world.BlockView;
-import net.minecraft.world.RaycastContext;
+import net.minecraft.server.level.ServerPlayer;
+import net.minecraft.util.Mth;
+import net.minecraft.world.entity.Entity;
+import net.minecraft.world.level.BlockGetter;
+import net.minecraft.world.level.ClipContext;
+import net.minecraft.world.level.Level;
+import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.world.level.material.FluidState;
+import net.minecraft.world.level.material.MapColor;
+import net.minecraft.world.phys.BlockHitResult;
+import net.minecraft.world.phys.Vec3;
+import net.minecraft.world.phys.shapes.VoxelShape;
 
 public class RaycastRenderer implements ActiveRenderer {
     private final MinecraftServer server;
@@ -38,15 +37,15 @@ public class RaycastRenderer implements ActiveRenderer {
     @Override
     public void render(PlayerCanvas outputCanvas, DrawableCanvas canvas, long time, int displayFps, int frame) {
         if (this.entity == null || this.entity.isRemoved()) {
-            for (var entity : this.server.getOverworld().iterateEntities()) {
+            for (var entity : this.server.overworld().getAllEntities()) {
                 if (entity.getCustomName() != null && entity.getCustomName().getString().equals("Camera")) {
                     this.entity = entity;
                     return;
                 }
             }
 
-            if (this.server.getPlayerManager().getPlayerList().size() > 0 && false) {
-                this.entity = this.server.getPlayerManager().getPlayerList().get(0);
+            if (this.server.getPlayerList().getPlayers().size() > 0 && false) {
+                this.entity = this.server.getPlayerList().getPlayers().getFirst();
                 return;
             }
 
@@ -55,7 +54,7 @@ public class RaycastRenderer implements ActiveRenderer {
             return;
         }
 
-        final int pixelSize = 4;
+        final int pixelSize = 16;
 
         int width = canvas.getWidth() / pixelSize;
         int height = canvas.getHeight() / pixelSize;
@@ -63,41 +62,41 @@ public class RaycastRenderer implements ActiveRenderer {
         var halfWidth = width / 2;
         var halfHeight = height / 2;
 
-        var yaw = this.entity.getYaw();
-        var pitch = this.entity.getPitch();
+        var yaw = this.entity.getYRot();
+        var pitch = this.entity.getXRot();
 
-        var pos = new Vec3d(this.entity.getX(), this.entity.getY() + this.entity.getStandingEyeHeight(), this.entity.getZ());
+        var pos = new Vec3(this.entity.getX(), this.entity.getY() + this.entity.getEyeHeight(), this.entity.getZ());
 
-        var world =  this.entity.getEntityWorld();
+        var world =  this.entity.level();
         for (var x = 0; x < width; x++) {
-            float yawAngle = -(yaw + (x - halfWidth) / 4f * pixelSize) * MathHelper.RADIANS_PER_DEGREE;
-            float yawCos = MathHelper.cos(yawAngle);
-            float yawSin = MathHelper.sin(yawAngle);
+            float yawAngle = -(yaw + (x - halfWidth) / 4f * pixelSize) * Mth.RAD_TO_DEG;
+            float yawCos = Mth.cos(yawAngle);
+            float yawSin = Mth.sin(yawAngle);
 
             for (var y = 0; y < height; y++) {
 
-                Vec3d max;
+                Vec3 max;
                 {
-                    float pitchAngle = (pitch + (y - halfHeight) / 4f * pixelSize) * MathHelper.RADIANS_PER_DEGREE;
-                    float pitchCos = MathHelper.cos(pitchAngle);
-                    float pitchSin = MathHelper.sin(pitchAngle);
+                    float pitchAngle = (pitch + (y - halfHeight) / 4f * pixelSize) * Mth.RAD_TO_DEG;
+                    float pitchCos = Mth.cos(pitchAngle);
+                    float pitchSin = Mth.sin(pitchAngle);
 
                     max = pos.add((yawSin * pitchCos) * 16, (-pitchSin) * 16, (yawCos * pitchCos) * 16);
                 }
-                var context = new RaycastContext(pos, max, RaycastContext.ShapeType.OUTLINE, RaycastContext.FluidHandling.ANY, this.entity);
+                var context = new ClipContext(pos, max, ClipContext.Block.OUTLINE, ClipContext.Fluid.ANY, this.entity);
 
-                var cast = BlockView.raycast(pos, max, null, (contextX, blockPos) -> {
+                var cast = BlockGetter.traverseBlocks(pos, max, null, (contextX, blockPos) -> {
                     BlockState blockState = world.getBlockState(blockPos);
                     if (blockState.isAir()) {
                         return null;
                     }
                     FluidState fluidState = world.getFluidState(blockPos);
                     VoxelShape voxelShape = context.getBlockShape(blockState, world, blockPos);
-                    BlockHitResult blockHitResult = world.raycastBlock(pos, max, blockPos, voxelShape, blockState);
+                    BlockHitResult blockHitResult = world.clipWithInteractionOverride(pos, max, blockPos, voxelShape, blockState);
                     VoxelShape voxelShape2 = context.getFluidShape(fluidState, world, blockPos);
-                    BlockHitResult blockHitResult2 = voxelShape2.raycast(pos, max, blockPos);
-                    double d = blockHitResult == null ? 1.7976931348623157E308D : pos.squaredDistanceTo(blockHitResult.getPos());
-                    double e = blockHitResult2 == null ? 1.7976931348623157E308D : pos.squaredDistanceTo(blockHitResult2.getPos());
+                    BlockHitResult blockHitResult2 = voxelShape2.clip(pos, max, blockPos);
+                    double d = blockHitResult == null ? 1.7976931348623157E308D : pos.distanceToSqr(blockHitResult.getLocation());
+                    double e = blockHitResult2 == null ? 1.7976931348623157E308D : pos.distanceToSqr(blockHitResult2.getLocation());
                     return d <= e ? blockHitResult : blockHitResult2;
                 }, (contextX) -> null);
 
@@ -105,43 +104,23 @@ public class RaycastRenderer implements ActiveRenderer {
                 int pY = y * pixelSize;
 
                 if (cast != null) {
-                    var state = this.entity.getEntityWorld().getBlockState(cast.getBlockPos());
+                    var state = this.entity.level().getBlockState(cast.getBlockPos());
 
-                    if (state.getBlock() instanceof PillarBlock) {
-                        state = switch (state.get(PillarBlock.AXIS)) {
-                            case Y -> switch (cast.getSide().getAxis()) {
-                                case Y -> state.with(PillarBlock.AXIS, Direction.Axis.Y);
-                                case X -> state.with(PillarBlock.AXIS, Direction.Axis.X);
-                                case Z -> state.with(PillarBlock.AXIS, Direction.Axis.Z);
-                            };
-                            case X -> switch (cast.getSide().getAxis()) {
-                                case Y -> state.with(PillarBlock.AXIS, Direction.Axis.X);
-                                case X -> state.with(PillarBlock.AXIS, Direction.Axis.Y);
-                                case Z -> state.with(PillarBlock.AXIS, Direction.Axis.Z);
-                            };
-                            case Z -> switch (cast.getSide().getAxis()) {
-                                case Y -> state.with(PillarBlock.AXIS, Direction.Axis.Z);
-                                case X -> state.with(PillarBlock.AXIS, Direction.Axis.X);
-                                case Z -> state.with(PillarBlock.AXIS, Direction.Axis.Y);
-                            };
-                        };
+                    var mapColor = state.getMapColor(this.entity.level(), cast.getBlockPos());
+                    if (mapColor == MapColor.NONE) {
+                        mapColor = MapColor.COLOR_MAGENTA;
                     }
 
-                    var mapColor = state.getMapColor(this.entity.getEntityWorld(), cast.getBlockPos());
-                    if (mapColor == MapColor.CLEAR) {
-                        mapColor = MapColor.WHITE_GRAY;
-                    }
-
-                    boolean border = !switch (cast.getSide()) {
-                        case UP, DOWN -> Math.abs(cast.getBlockPos().getX() + 0.5 - cast.getPos().x) > 0.4 || Math.abs(cast.getBlockPos().getZ() + 0.5 - cast.getPos().z) > 0.4;
-                        case EAST, WEST -> Math.abs(cast.getBlockPos().getZ() + 0.5 - cast.getPos().z) > 0.4 || Math.abs(cast.getBlockPos().getY() + 0.5 - cast.getPos().y) > 0.4;
-                        case NORTH, SOUTH -> Math.abs(cast.getBlockPos().getX() + 0.5 - cast.getPos().x) > 0.4 || Math.abs(cast.getBlockPos().getY() + 0.5 - cast.getPos().y) > 0.4;
+                    boolean border = !switch (cast.getDirection()) {
+                        case UP, DOWN -> Math.abs(cast.getBlockPos().getX() + 0.5 - cast.getLocation().x) > 0.4 || Math.abs(cast.getBlockPos().getZ() + 0.5 - cast.getLocation().z) > 0.4;
+                        case EAST, WEST -> Math.abs(cast.getBlockPos().getZ() + 0.5 - cast.getLocation().z) > 0.4 || Math.abs(cast.getBlockPos().getY() + 0.5 - cast.getLocation().y) > 0.4;
+                        case NORTH, SOUTH -> Math.abs(cast.getBlockPos().getX() + 0.5 - cast.getLocation().x) > 0.4 || Math.abs(cast.getBlockPos().getY() + 0.5 - cast.getLocation().y) > 0.4;
                     };
 
-                    var brightness = switch (cast.getSide().getAxis()) {
+                    var brightness = switch (cast.getDirection().getAxis()) {
                         case Z -> border ? MapColor.Brightness.NORMAL : MapColor.Brightness.LOW;
                         case X -> border ? MapColor.Brightness.LOW : MapColor.Brightness.LOWEST;
-                        case Y -> cast.getSide().getDirection() == Direction.AxisDirection.POSITIVE
+                        case Y -> cast.getDirection().getAxisDirection() == Direction.AxisDirection.POSITIVE
                                 ? border ? MapColor.Brightness.HIGH : MapColor.Brightness.NORMAL
                                 : border ? MapColor.Brightness.LOW : MapColor.Brightness.LOWEST;
                     };
@@ -176,7 +155,7 @@ public class RaycastRenderer implements ActiveRenderer {
     }
 
     @Override
-    public void onClick(ServerPlayerEntity player, VirtualDisplay.ClickType type, int x, int y) {
+    public void onClick(ServerPlayer player, VirtualDisplay.ClickType type, int x, int y) {
 
     }
 }
